# POCO-Projects

./: .gitignore
String/: CMakeLists.txt  string.c  string.h
String/cmake/: FindCheck.cmake
String/example/: str_usage_p1.c  str_usege_p1.c
String/src/: string.c  string.h
String/tests/: CMakeLists.txt  test_string.c
Usage/: str_usege_p1.c
